config/samples/feature-gated/kong-service-facade.yaml
# This example demonstrates how to use the KongServiceFacade resource to
# configure Kong to route traffic to a Kubernetes Service, and secure it
# with a different plugin for each KongServiceFacade.
#
# To verify the example:
#
# 1. Install the KongServiceFacade CRD, which `make install.crds` does not include:
#    $ kubectl apply --server-side -k config/crd/ingress-controller-incubator
#
# 2. Apply this manifest. It brings its own DataPlane and ControlPlane, with the
#    `KongServiceFacade` feature gate enabled (see this directory's README.md).
#
# 3. Wait for KongServiceFacades to be configured in Kong:
#
#    $ kubectl wait --for=condition=Programmed=True kongservicefacade/svc-facade-alpha kongservicefacade/svc-facade-beta
#
# 4. Get Proxy's Service external IP:
#
#    $ export PROXY_IP=$(kubectl get svc -l gateway-operator.konghq.com/dataplane-service-type=ingress -o=jsonpath='{.items[0].status.loadBalancer.ingress[0].ip}')
#    $ echo $PROXY_IP # To ensure that the variable is set.
#    198.19.249.2
#
# 5. Verify that paths /alpha and /beta are secured with key-auth and basic-auth respectively (we're using httpie here):
#
#    $ http -h ${PROXY_IP}/alpha key:alice-password  # /alpha allows valid key.
#    HTTP/1.1 200 OK
#    $ http -h ${PROXY_IP}/alpha key:wrong-key       # /alpha doesn't allow invalid key.
#    HTTP/1.1 401 Unauthorized
#    $ http -h ${PROXY_IP}/alpha -a bob:bob-password # /alpha doesn't allow valid basic-auth credentials.
#    HTTP/1.1 401 Unauthorized
#    $ http -h ${PROXY_IP}/beta -a bob:bob-password  # /beta allows valid basic-auth credentials.
#    HTTP/1.1 200 OK
#    $ http -h ${PROXY_IP}/beta -a bob:wrong         # /beta doesn't allow invalid basic-auth credentials.
#    HTTP/1.1 401 Unauthorized
#    $ http -h ${PROXY_IP}/beta key:alice-password   # /beta doesn't allow valid key.
#    HTTP/1.1 401 Unauthorized
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-deployment
  namespace: default
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kong/httpbin:0.1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin-deployment
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /alpha
            pathType: Prefix
            backend:
              # The /alpha path uses the KongServiceFacade secured with key-auth plugin.
              resource:
                apiGroup: incubator.ingress-controller.konghq.com
                kind: KongServiceFacade
                name: svc-facade-alpha
          - path: /beta
            pathType: Prefix
            backend:
              # The /beta path uses the KongServiceFacade secured with basic-auth plugin.
              resource:
                apiGroup: incubator.ingress-controller.konghq.com
                kind: KongServiceFacade
                name: svc-facade-beta
